# OpcUaDiscoveryServer

./: .gitignore  CHANGELOG.rst  Dockerfile  README.rst  start.bat
doc/doxygen/: Doxyfile
docs/source/: conf.py
src/: CMakeLists.txt
src/OpcUaDiscoveryServer/: CMakeLists.txt
src/OpcUaDiscoveryServer/Config/: DiscoveryModel.xml  OpcUaServer.xml
src/OpcUaDiscoveryServer/linux/etc/init/: OpcUaDiscoveryServer.conf.in
src/OpcUaDiscoveryServer/linux/etc/init.d/: OpcUaDiscoveryServer.in
src/OpcUaDiscoveryServer/linux/script/: postinst  prerm
src/OpcUaDiscoveryServer/linux/usr/lib/systemd/system/: OpcUaDiscoveryServer.service.in
